SDK Release Notes
#################

.. contents:: List of Releases
   :depth: 1

UNRELEASED
##########

API Changes
***********

* ADDED: ListItem OptionSelector to Components/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/Ambiance/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruDark/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruGradient/ListItems
* REMOVED IN ALL: attached property ItemStyle
* ADDED IN OrientationHelper: property alias rotating
* ADDED IN OrientationHelper: property alias __orientationHelper
* ADDED IN OrientationHelper: property bool transitionEnabled
* DEPRECATED IN QuickUtils: property Item rootObject
* CHANGED IN OrientationHelper: property int __orientationHelper TO property int orientationHelper
* CHANGED IN Toolbar: property bool active TO property bool opened
* CHANGED IN Toolbar: property bool lock TO property bool locked
* CHANGED IN ToolbarActions: property bool active TO property bool opened
* CHANGED IN ToolbarActions: property bool lock TO property bool locked
* DEPRECATED IN Toolbar: property bool active
* DEPRECATED IN Toolbar: property bool lock
* DEPRECATED IN ToolbarActions: property bool active
* DEPRECATED IN ToolbarActions: property bool lock
* CHANGED IN Page: property Header header TO property Header __propagated.header
* CHANGED IN Page: property Toolbar toolbar TO property Toolbar __propagated.toolbar
* CHANGED IN MainView: property Header header TO property Header __propagated.header
* CHANGED IN MainView: property Toolbar toolbar TO property Toolbar __propagated.toolbar
* DEPRECATED IN Page: property Header header
* DEPRECATED IN Page: property Toolbar toolbar
* DEPRECATED IN MainView: property Header header
* DEPRECATED IN Page: property Toolbar toolbar
* REMOVED in MainView: property QtObject __hud 
* CHANGED in ToolbarActions: INHERIT Item INSTEAD OF ActionList
* CHANGED in Page: property ToolbarActions tools TO property Item tools